# nova-vndb-server

./: Cargo.toml  README.md
bridges/wiki_community_bridge/: Cargo.toml
bridges/wiki_community_bridge/src/: lib.rs
libs/api_def/: Cargo.toml
libs/nova_framework/: Cargo.toml
libs/nova_framework/src/: error.rs  lib.rs  mongo.rs  rabbitmq.rs  sqlx.rs  view.rs
modules/auth/: Cargo.toml
modules/auth/src/: lib.rs
modules/auth/src/entities/db/: email_otp.rs  mod.rs  oauth_account.rs  user_attribute.rs  user_password.rs
modules/auth/src/entities/redis/: mod.rs  oauth_challenge.rs
modules/auth/src/utils/: abac.rs  mod.rs
modules/auth/src/utils/oauth/providers/: mod.rs
modules/community/: Cargo.toml
modules/community/src/: lib.rs
modules/community/src/entities/: mod.rs
modules/community/src/entities/db/: docs.rs  image_votes.rs  mod.rs  tag_votes.rs  user_profile.rs
modules/mailer/src/: lib.rs
modules/waf/src/: lib.rs
modules/wiki/: Cargo.toml
modules/wiki/src/: lib.rs
modules/wiki/src/entities/db/: anime.rs  character.rs  entry_meta.rs  external_links.rs  game_tech_stack.rs  image_resource.rs  language.rs  mod.rs  producers.rs  quotes.rs  releases.rs  staff.rs  tags.rs  traits_data.rs  visual_novels.rs  wikidata.rs
modules/wiki/src/view/: mod.rs
server/src/: main.rs
server/src/worker/: mod.rs
tools/nova-vndb-cli/: Cargo.toml
tools/vndb-migrator/: Cargo.toml
